<resources>
    <string name="app_name">LohmegaLog</string>
    <string name="action_rescan">Re-scan</string>
    <string name="action_stopscan">Stop Scan</string>
    <string name="empty_scan_item">Device Address</string>
    <string name="rtd_switch_title">Real Time Measurements</string>
    <string name="rtd_acceleration_title">Acceleration</string>
    <string name="rtd_battery_voltage_title">Battery Voltage</string>
    <string name="rtd_illuminance_title">Illuminance</string>
    <string name="rtd_magnetic_field_title">Magnetic Field</string>
    <string name="rtd_pressure_title">Pressure</string>
    <string name="rtd_humidity_title">Rel. Humidity</string>
    <string name="rtd_rotation_title">Rotation Rate</string>
    <string name="rtd_temperature_title">Temperature</string>
    <string name="rtd_uv_title">UV Index</string>
    <string name="device_disconnected">Not Connected</string>
    <string name="device_connected">Connected</string>
    <string name="device_value_unavailable">n/a</string>
    <string name="device_blink_available">Blink</string>
    <string name="device_battery_level">%1$s%%</string>
    <string name="device_rssi">%1$s db</string>
    <string name="permission_dialog_title">Please Grant Permission</string>
    <string name="location_permission_dialog_text">Location permission are required for Bluetooth Low Energy connections.</string>
    <string name="ble_permission_dialog_text">Bluetooth scan permission are required for Bluetooth Low Energy connections.</string>
    <string name="dialog_no">Cancel</string>
    <string name="dialog_confirm">OK</string>
    <string name="info_dialog_title">Information</string>
    <string name="connection_timeout_text">Connection timed out. Please try again.</string>
    <string name="connection_error_text">Something went wrong. Please try again.</string>
    <string name="device_disconnected_text">Device Disconnected. Please try again.</string>
    <string name="device_connection_failed">Connection Failed. Please Check if Bluetooth is enabled and try again.</string>
    <string name="prompt_enable_bluetooth">Please enable Bluetooth to find BlueBerry devices.</string>
</resources>