<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="7dp"
        android:paddingEnd="7dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/rtd_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rtd_switch_title"
            android:textSize="17sp"/>

        <ProgressBar
            android:id="@+id/progress_rtd"
            android:layout_marginTop="-7dp"
            android:layout_marginBottom="-7dp"
            android:indeterminate="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal" />

        <LinearLayout
            android:id="@+id/acc_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/rtd_acceleration_title"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/rtd_acc_value"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:textSize="15sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/battery_voltage_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/rtd_battery_voltage_title"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/rtd_battery_voltage_value"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:textSize="15sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/illuminance_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/rtd_illuminance_title"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/rtd_illuminance_value"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:textSize="15sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/magnetometer_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/rtd_magnetic_field_title"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/rtd_magnetometer_value"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:textSize="15sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/pressure_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/rtd_pressure_title"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/rtd_pressure_value"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:textSize="15sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/humidity_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/rtd_humidity_title"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/rtd_humidity_value"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:textSize="15sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/rot_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/rtd_rotation_title"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/rtd_rot_value"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:textSize="15sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/temp_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/rtd_temperature_title"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/rtd_temp_value"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:textSize="15sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/uv_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/rtd_uv_title"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/rtd_UV_value"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>